# Pulsus

./: .gitignore  ARCHITECTURE.md  ARCHITECTURE_AUDIT_REPORT.md  COMPREHENSIVE_TEST_REPORT.md  E2E_TEST_REPORT.md  LICENSE  README.md  TEST_REPORT.md  TODO.md  __main__.py  analyze_pcu_factors.py  check_column_names.py  diagnose_pcu_issue.py  prepompt.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  test_pcu_calculation.py  test_pcu_column_detection.py
.claude/: settings.local.json
.claude/agents/: README.md  jean-claude-architect.md  jean-claude-auditor.md  jean-claude-designer.md  jean-claude-domain.md  jean-claude-mcp.md  jean-claude-mechanic.md  jean-claude-science.md  jean-claude-tool.md
.github/workflows/: test.yml
config/: CONFIG_README.md  features_display.py  greeting.py  llm_greeting.py  metadata_schema.py  preprompt.md  session.py  settings.py
console/: interface.py  interrupt_handler.py  session_history.py  session_manager.py
core/: pulsus_storage.py  types.py
core/compose/: composer.py  generator.py  selector.py
core/rankers/: features.py  scorer.py
core/sandbox/: policy.py  runner.py
core/storage/: changelog.py  fs.py  metadata_store.py
core/telemetry/: logging.py
core/validators/: mypy_runner.py  ruff_runner.py  unit_runner.py
docs/: ARCHITECTURE.md  ARCHITECTURE_IMPROVEMENTS_SUMMARY.md  ARCHITECTURE_QUICK_REFERENCE.md  BMAP_BUILDING_MCP_SCRIPTS.md  CLASSIC_MCP_CATALOG.md  DEPENDENCIES.md  FRAMEWORK_INTEGRATION_ADDENDUM.md  MODULE_RENAME_SUMMARY.md  PHASE1_COMPLETE.md  PHASE2_PLAN.md  PHASE2_PROGRESS.md  PHASE2_WEEK1_COMPLETE.md  PHASE3_COMPLETE.md  PHASE3_PLAN.md  PULSUS_INTRODUCTION.md  PULSUS_MCP_UNIFIED_INTEGRATION_PLAN.md
docs/archive/: fixing_todo.md
docs/old/: MCP-PULSUS-CRITICAL-REVIEW.md  MCP-PULSUS-TODO-V0.md  MCP-PULSUS-TODO-V1.md  MCP-PULSUS-TODO-V2.md  MCP-PULSUS-TODO-V3-part2.md  MCP_PHASE1_COMPLETE.md  MCP_TRIGGERS.md  OLLAMA_SETUP.md  PHASE1_COMPLETE.md  PULSUS-FEATURE-COMMENTING.md  PULSUS_REVIEW_AND_ENHANCEMENTS.md  UX_IMPROVEMENTS.md  todo.md  (+4 more)
interface/: __init__.py
langchain/: __init__.py  graph_executor.py  tool_adapter.py
langchain_integration/: __init__.py  state.py  tool_adapter.py
mcp/: __init__.py
preferences/: __init__.py
routing/: MCP_CLASS_BASED_IMPLEMENTATION_PLAN.md  ROUTING_README.md  __init__.py  mcp_router.py  prompt_parser.py  router.py  tool_discovery.py
safenet/: __init__.py  dashboard.py
scripts/: render_diagrams.py
shared/: domain_validator.py  repo_loader.py  settings.py  tools.py
tests/: conftest.py  launch_console.bat  pulsus_launch.bat  run_comprehensive_mcp_test.py  run_core_tests.py  run_mcp_tests_with_prompts.py  run_phase2_direct_tests.py  test_import.py  test_integration.py  test_phase3.py  test_repository_ops.py
ui/: UI_README.md  display_manager.py  streaming.py
workflows/: README.md  ROUTING_ENHANCEMENTS.md  TODO.md  UNIFIED_PATH_QUICKSTART.md  dependency_documentation.json  discovery_scan.json  file_analysis.json  function_commenting.json  generate_repo_report.json  repository_analysis.json  unified_path_analysis.json  validate_file_quality.json
(+83 files in other folders)
