[project]
name = "pulsus"
version = "0.1.0"
description = "A world-class MCP execution agent with LangChain workflows and Claude Code integration"
authors = [
    {name = "Jean-Noel Diltoer", email = "jean-noel.diltoer@example.com"}
]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "langchain>=0.1.0",
    "langchain-community>=0.0.10",
    "langgraph>=0.0.20",
    "pydantic>=2.0.0",
    "ollama>=0.1.0",
    "psutil>=5.9.0",
    "jinja2>=3.1.0",
    "jsonschema>=4.17.0",
    "httpx>=0.24.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
    "black>=23.9.0",
    "bandit>=1.7.5",
]

[project.scripts]
pulsus = "pulsus.__main__:main"

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--cov=pulsus",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--cov-report=xml",
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["pulsus"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/route_tmp/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
fail_under = 90

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
strict_concatenate = true

[[tool.mypy.overrides]]
module = [
    "langchain.*",
    "langgraph.*",
    "ollama.*",
]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # function calls in argument defaults
    "B904",  # raise from None
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports
"tests/*" = ["ARG001", "ARG002"]  # unused arguments in tests

[tool.ruff.lint.isort]
known-first-party = ["pulsus"]

[tool.black]
line-length = 100
target-version = ["py310"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.ruff_cache
  | __pycache__
  | build
  | dist
  | route_tmp
)/
'''

[tool.bandit]
exclude_dirs = ["tests", "route_tmp"]
skips = ["B101"]  # assert_used
